# ezviz-linux-poc

./: .gitignore  CMakeLists.txt  README.md  a.mpg  ezviz  go.mod  log4cxx.properties  main.go  opc_data.py  play.html  sender.py
deployment/: Dockerfile  downloader.Dockerfile
libs/: libPocoCrypto.so.80  libstdc++.la  libstdc++.so.6.0.26-gdb.py
scripts/: clean_redis.py  downLoadVideo.py  ezviz-cmd  getPic.py  getToken.py  intelabInfluxdb.py  matched.tx  newVideoDownloader.py  sender.py  sender_local.py  showAllFailedTasks.py  videoDownloader.py  videoSchedDownloader.py
src/: _main.cpp  _main.cpp.bak  main.cpp  main.cpp.bak  test_cpp_redis.cpp
src/inc/: common.hpp  ezviz.hpp  httplib.hpp  svc.hpp  uuid.hpp
src/inc/amqp/: handler.hpp
